fixed up the navbar chnaged the logo, aligned the items

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -13,12 +13,6 @@ header > h1 {
   font-weight: bolder;
 }
 
-#search-bar {
-  position: absolute;
-  right: 200px;
-  top: 48px;
-}
-
 .avatar-large {
   position: absolute;
   right: 40px;
