--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,9 +19,11 @@
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
-  justify-content: space-evenly!important;
+  justify-content: space-between!important;
   position: absolute;
-  right: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  top: 48px;
 }
 
 #search-bar button {
@@ -29,12 +31,14 @@
   background-color: #E0E0E0;
   color: grey;
   border-color: transparent;
+  width: 50px;
 }
 
 #search-bar input {
   margin: 0;
   background-color: #E0E0E0;
   border-color: #E0E0E0;
+  width: 500px;
 }
 
 .logo {
